tool/tests/snapshots/dotnet_target__method_writeable_out@RawMyStruct.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct MyStruct
{
#if __IOS__
    private const string NativeLib = "librust.framework/librust";
#else
    private const string NativeLib = "rust";
#endif

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_write", ExactSpelling = true)]
    public static unsafe extern void Write(MyStruct* self, DiplomatWriteable* out);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_write_unit", ExactSpelling = true)]
    public static unsafe extern void WriteUnit(MyStruct* self, DiplomatWriteable* out);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_write_result", ExactSpelling = true)]
    public static unsafe extern FfiResultVoidU8 WriteResult(MyStruct* self, DiplomatWriteable* out);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_write_no_rearrange", ExactSpelling = true)]
    public static unsafe extern byte WriteNoRearrange(MyStruct* self, DiplomatWriteable* out);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_destroy", ExactSpelling = true)]
    public static unsafe extern void Destroy(MyStruct* self);
}

