tool/tests/snapshots/dotnet_target__option_types@RawMyStruct.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct MyStruct
{
#if __IOS__
    private const string NativeLib = "librust.framework/librust";
#else
    private const string NativeLib = "rust";
#endif

    public unsafe MyOpaqueStruct* a;
}

