tool/tests/snapshots/dotnet_target__result_types@MyStruct.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class MyStruct
{
    private Raw.MyStruct _inner;

    public byte A
    {
        get
        {
            unsafe
            {
                return _inner.a;
            }
        }
        set
        {
            unsafe
            {
                _inner.a = value;
            }
        }
    }

    /// <summary>
    /// Creates a managed <c>MyStruct</c> from the raw representation.
    /// </summary>
    public unsafe MyStruct(Raw.MyStruct data)
    {
        _inner = data;
    }

    /// <exception cref="ByteException"></exception>
    /// <returns>
    /// A <c>MyStruct</c> allocated on C# side.
    /// </returns>
    public static MyStruct New()
    {
        unsafe
        {
            IntPtr resultPtr = Raw.MyStruct.New();
            Raw.FfiResultMyStructU8 result = Marshal.PtrToStructure<Raw.FfiResultMyStructU8>(resultPtr);
            Raw.FfiResultMyStructU8.Destroy(resultPtr);
            if (!result.isOk)
            {
                throw new ByteException(result.Err);
            }
            Raw.MyStruct retVal = result.Ok;
            return new MyStruct(retVal);
        }
    }

    /// <summary>
    /// Returns a copy of the underlying raw representation.
    /// </summary>
    public Raw.MyStruct AsFFI()
    {
        return _inner;
    }
}

